initialSetup/main/default/objects/Patient_Eligibility_Run_Log__c/Patient_Eligibility_Run_Log__c.object-meta.xml
<CustomObject>
    <label>Patient Eligibility Run Log</label>
    <nameField>
        <displayFormat>PELR-{000000}</displayFormat>
        <label>Patient Eligibility Run Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Eligibility Run Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>