initialSetup/main/default/objects/Patient_Eligibility_Run_Log__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Agent</fullName>
            </value>
            <value>
                <fullName>PCP Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>