initialSetup/main/default/objects/Patient_Eligibility_Run_Log__c/fields/Enrolled_Site_Research_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Site_Research_Candidate__c</fullName>
    <label>Enrolled Site Research Candidate</label>
    <referenceTo>Enrolled_Site_Research_Candidate__c</referenceTo>
    <relationshipLabel>Patient Eligibility Run Logs</relationshipLabel>
    <relationshipName>Patient_Eligibility_Run_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>