initialSetup/main/default/objects/Patient_Eligibility_Run_Log__c/fields/Prompt_Response__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Response__c</fullName>
    <label>Prompt Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>