initialSetup/main/default/objects/Patient_Eligibility_Run_Log__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>LLM Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>